set USB product id

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,9 +9,16 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:pico]
-platform = raspberrypi
+platform = https://github.com/maxgerhardt/platform-raspberrypi.git
 board = pico
 framework = arduino
+board_build.core = earlephilhower
+board_build.f_cpu = 250000000L
+upload_protocol = picotool
+debug_tool = picoprobe
+build_flags =
+	-O3
+	-DUSE_TINYUSB
 lib_deps = 
 	jonniezg/EWMA@^1.0.2
 	dmadison/ServoInput@^1.0.2
